force-app/main/default/objects/HT_BTA_Details__c/HT_BTA_Details__c.object-meta.xml
<CustomObject>
    <label>BTA  Details</label>
    <nameField>
        <displayFormat>BTA-{0000000}</displayFormat>
        <label>BTA  Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTA  Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>