force-app/main/default/objects/HT_BTA_Details__c/fields/AT_T_BTA_Tier__c.field-meta.xml
<CustomField>
    <fullName>AT_T_BTA_Tier__c</fullName>
    <label>AT&amp;T BTA Tier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>