force-app/main/default/objects/HT_BTA_Details__c/fields/BTA_Name__c.field-meta.xml
<CustomField>
    <fullName>BTA_Name__c</fullName>
    <label>BTA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>