force-app/main/default/objects/HT_BTA_Details__c/fields/BTA_Number__c.field-meta.xml
<CustomField>
    <fullName>BTA_Number__c</fullName>
    <label>BTA Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>