force-app/main/default/objects/HT_BTA_Details__c/fields/TMO_BTA_Tier__c.field-meta.xml
<CustomField>
    <fullName>TMO_BTA_Tier__c</fullName>
    <label>TMO BTA Tier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>